operator/pkg/controllers/hubofhubs/manifests/grafana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: multicluster-global-hub-grafana
  name: multicluster-global-hub-grafana
spec:
  port:
    targetPort: "oauth-proxy"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: multicluster-global-hub-grafana
